# ADOCAV

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.bat  build.sh
.github/workflows/: build.yml  release.yml
app/: Application.cpp  Application.h  GameWindow.cpp  GameWindow.h  LauncherWindow.cpp  LauncherWindow.h  LevelLoader.cpp  LevelLoader.h  LoadingWindow.cpp  LoadingWindow.h  main.cpp
audio/: AudioEngine.cpp  AudioEngine.h  HitsoundManager.cpp  HitsoundManager.h  stb_vorbis_impl.cpp
b/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini  test_small.adofai
b/shaders/: planet.frag.spv  tile.frag.spv  tile.vert.spv  tile_cull.comp.spv  tile_offset.comp.spv  trail.vert.spv
camera/: Camera.cpp  Camera.h
game/: Planet.cpp  Planet.h  PlaybackEngine.cpp  PlaybackEngine.h
glad/: gl_core.cpp  gl_core.h
level/: JsonCleaner.cpp  JsonCleaner.h  LevelData.cpp  LevelData.h
render/: PlanetTrail.cpp  PlanetTrail.h
render/vulkan_impl/: FrameData.cpp  FrameData.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCore.cpp  VulkanCore.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineCache.cpp  VulkanPipelineCache.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSwapchain.cpp  VulkanSwapchain.h
shaders/: compile.bat  icon.vert  tile.frag  tile.vert  tile_cull.comp  tile_offset.comp  trail.frag  trail.vert
track/: TileGeometry.cpp  TileGeometry.h  TileMesh.cpp  TileMesh.h
util/: Easing.h  Logger.cpp  Logger.h
